# MultiMind-AI

./: .gitignore  README.md  index.html  pyproject.toml  test_pipeline.py
benchmarks/: __init__.py  harness.py  report.py  run_benchmarks.py  run_standard_benchmarks.sh  scorer.py
benchmarks/results/: gsm8k_mini__qwen3.5:0.8b__hard.json  gsm8k_mini__qwen3.5:0.8b__medium.json  gsm8k_mini__qwen3.5:0.8b__off.json  gsm8k_mini__qwen3.5:4b__hard.json  gsm8k_mini__qwen3.5:4b__medium.json  gsm8k_mini__qwen3.5:4b__off.json  summary.json  tussentijds_report.md
benchmarks/suites/: __init__.py  code_gen.py  council_qa.py  fullstack.py  gsm8k_mini.py
docs/superpowers/specs/: 2026-03-19-browser-persistent-memory-design.md
multimind/: __main__.py  config.py  discovery.py  llm_client.py  main.py  markdown_render.py  org_pipeline.py  org_roles.py  pipeline.py
multimind/static/: app.js  styles.css
multimind/templates/: index.html
