[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimind"
version = "0.2.1"
description = "Local-first reasoning pipeline wrapper for Ollama and LM Studio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.scripts]
multimind = "multimind.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["multimind*"]

[tool.setuptools.package-data]
multimind = ["static/*", "static/**/*", "templates/*"]